# chane-server

./: .gitignore  Cargo.toml
bindings/: Activity.ts  ActivityTable.ts  AuthJoinBody.ts  AuthJoinError.ts  AuthLoginBody.ts  AuthLoginError.ts  AuthMe.ts  AuthPublic.ts  Block.ts  ChangeBlockBody.ts  ChangeChannelDescriptionBody.ts  ChangeChannelLabelsBody.ts  ChangeRoleBody.ts  Channel.ts  ChannelActivity.ts  ChannelType.ts  ConnectBlockToChannelBody.ts  CreateBlockBody.ts  CreateChannelBody.ts  CreateRoleBody.ts  CreateRoleError.ts  DisconnectBlockFromChannelBody.ts  GeneralError.ts  GetChannelBlocksQuery.ts  GlobalActivity.ts  LiveMessage.ts  PinChannelBlockBody.ts  ResultResponse.ts  Role.ts  RoleError.ts  RolePermissions.ts  RoleWrappedError.ts  User.ts  UserActivity.ts
src/: main.rs  shared.rs
src/activity_logger/: activity.rs  mod.rs
src/auth_validator/: mod.rs
src/db_pool/: activity_table.rs  blocks.rs  channels.rs  groups.rs  mod.rs  roles.rs  users.rs  utils.rs
src/http_server/: error_handlers.rs  mod.rs
src/http_server/api/: activity_table.rs  auth.rs  bindings.rs  blocks.rs  channels.rs  groups.rs  live.rs  live_channel.rs  mod.rs  roles.rs  users.rs
src/http_server/errors/: auth.rs  general.rs  mod.rs  roles.rs
src/http_server/extractors/: session.rs
src/live_channel/: mod.rs
src/logger/: mod.rs
src/session/: auth.rs  blocks.rs  channels.rs  groups.rs  live_channel.rs  mod.rs  roles.rs  users.rs
src/session_pool/: activity_table.rs  auth.rs  blocks.rs  channels.rs  groups.rs  live.rs  mod.rs  roles.rs  users.rs
(+2 files in other folders)
