[package]
name = "chane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
mongodb = "2.4.0"
pwhash = "1.0.0"
rand = "0.8.5"
serde = "1.0.154"
thiserror = "1.0.39"
