[package]
name = "chane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-ws = "0.2.5"
async-trait = "0.1.66"
chrono = "0.4.23"
futures-util = "0.3.27"
jsonwebtoken = "8.2.0"
mongodb = "2.4.0"
pwhash = "1.0.0"
rand = "0.8.5"
serde = "1.0.154"
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = "1.26.0"
