[package]
name = "chane"
version = "0.1.0"
edition = "2021"

[features]
trait-alias = []

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-ws = "0.2.5"
async-trait = "0.1.66"
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.27"
futures-util = "0.3.27"
jsonwebtoken = "8.2.0"
mongodb = "2.4.0"
pwhash = "1.0.0"
rand = "0.8.5"
serde = "1.0.154"
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["macros", "fs", "time", "sync"] }
tokio-scoped = "0.2.0"
ts-rs = "6.2.1"
